--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,10 +63,11 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Aulas:
-    - Aula 1-: aulas/Aula1.md
-    - Aula 2-: aulas/Aula2.md
-    - Aula 3-: aulas/Aula3.md
+    - Aula 1- Introdução à ética profissional: aulas/Aula1.md
+    - Aula 2- Princípios éticos no local de trabalho: aulas/Aula2.md
+    - Aula 3- Tomada de decisões éticas no ambiente profissional: aulas/Aula3.md
 
 
 extra:
   generator: false
+  
